<resources>
    <string name="app_name">Eventer</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="create_event">Create Event</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="return_button">Return to previous activity</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="join">Join</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="create_account">Create Account</string>
    <string name="not_registered">Not registered?</string>
    <string name="email">Email</string>
    <string name="i_agree">I agree</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="name_header">Name:</string>
    <string name="email_header">E-mail:</string>
    <string name="info_header">Info:</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="friends_list">Friends</string>
    <string name="your_friends">Your Friends:</string>
    <string name="pending_friend_requests">Pending Requests:</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">location</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="address">Address:</string>
    <string name="username">Not logged in</string>
    <string name="starting_at">Starting At:</string>
    <string name="ending_at">Ending At:</string>
    <string name="content">Content</string>
    <string name="no_user_signed_in">No user signed in!</string>
    <string name="participants">participants</string>
    <string name="participant">participant</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="msg_already_joined_event">You have already joined this event!</string>
    <string name="msg_not_auth_edit_event">You are not authorized to edit this event!</string>
    <string name="msg_login_to_join_event">Please login to join the event!</string>
    <string name="msg_join_event_successful">You joined the event!</string>
    <string name="msg_join_event_unsucessful">Unable to join the event...</string>
    <string name="msg_fetch_event_from_server_unsucessful">Couldn\'t fetch event from server.</string>
    <string name="msg_fetch_user_from_server_unsucessful">Couldn\'t fetch user from server.</string>
    <string name="msg_fetch_list_events_from_server_unsucessful">Couldn\'t fetch list of events from server.</string>
    <string name="msg_login_to_create_event">Please login to create event!</string>
    <string name="msg_login_auth_failed">Authentication failed. Check your username and password.</string>
    <string name="msg_enter_all_fields">You must enter all fields...</string>
    <string name="msg_event_updated_sucess">Event sucessfully updated!</string>
    <string name="msg_event_update_unsucessful">Event failed to update...</string>
    <string name="msg_event_not_created">Event couldn\'t be created.</string>
    <string name="msg_enter_first_name">Please enter a first name.</string>
    <string name="msg_enter_last_name">Please enter a last name.</string>
    <string name="msg_enter_email">Please enter an email-address.</string>
    <string name="msg_enter_valid_email">Please enter a valid email-address.</string>
    <string name="msg_enter_password">Please enter a password with at least 6 characters.</string>
    <string name="msg_create_user_failed">E-mail already in use. Please use a different e-mail for your account.</string>
    <string name="leave">Leave</string>
    <string name="msg_login_to_leave_event">Please login to leave the event!</string>
    <string name="msg_leave_event_sucessful">You left the event!</string>
    <string name="msg_leave_event_unsucessful">Unable to leave the event...</string>

</resources>
