<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/start_date_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/start_date"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_centre"
        app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

    <EditText
        android:id="@+id/end_date_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/end_date"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_centre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

    <EditText
        android:id="@+id/start_time_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/start_time"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_centre"
        app:layout_constraintTop_toBottomOf="@id/start_date_edit_text" />

    <EditText
        android:id="@+id/end_time_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/end_time"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_centre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_date_edit_text" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time_edit_text" />

    <FrameLayout
        android:id="@+id/address_frame_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_edit_text">

    <fragment
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:id="@+id/autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/test_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_centre"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_centre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_centre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>