<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="276dp"
        android:layout_height="59dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_centre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/first_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/first_name_edit_text" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="276dp"
        android:layout_height="59dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/last_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/first_name_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="272dp"
        android:layout_height="54dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_centre"
        app:layout_constraintStart_toStartOf="@+id/last_name_edit_text"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/create_event_button"
        android:layout_width="165dp"
        android:layout_height="53dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_centre"
        app:layout_constraintVertical_bias="0.709" />

    <ImageButton
        android:id="@+id/return_button_create"
        android:layout_width="43dp"
        android:layout_height="44dp"
        android:contentDescription="@string/return_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_centre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="379dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_centre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>
</androidx.constraintlayout.widget.ConstraintLayout>